# autorebase

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
doc/: after.cast  before.cast  during.cast
examples/: create_demo_repo.rs
git_commands/: Cargo.toml
git_commands/src/: lib.rs
src/: config.rs  conflicts.rs  git_commands.rs  glob.rs  lib.rs  main.rs  test_utils.rs  trim.rs
tests/: all.rs  basic.rs  basic_conflict.rs  checked_out.rs  conflict_resume.rs  create_test_repo.rs  multiple_branches.rs  multiple_refs_on_branch.rs  random.rs
tests/tests/: all_branches.rs  basic.rs  basic_conflict.rs  checked_out.rs  conflict_resume.rs  create_test_repo.rs  from_another_worktree.rs  mod.rs  multiple_branches.rs  multiple_refs_on_branch.rs  random.rs
tests/utils/: mod.rs  random_repo.rs
