[package]
name = "autorebase"
version = "0.4.4"
authors = ["Tim Hutt <timh@graphcore.ai>"]
edition = "2018"
license = "MIT"
description = "Automatically rebase feature branches onto master"
keywords = ["git", "rebase"]
repository = "https://github.com/Timmmm/autorebase"

[dependencies]
anyhow = "1.0.40"
argh = "0.1.4"
colored = "2.0.0"
git_commands = { path = "git_commands", version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[dev-dependencies]
# For tests
tempfile = "3.1.0"
rand = "0.8.3"
