[package]
authors = [ "Tim Hutt <timh@graphcore.ai>" ]
description = "Automatically rebase feature branches onto master"
edition = "2021"
keywords = [ "git", "rebase" ]
license = "MIT"
name = "autorebase"
repository = "https://github.com/Timmmm/autorebase"
version = "0.7.0"

[dependencies]
anyhow = "1.0.86"
argh = "0.1.12"
colored = "2.1.0"
env_logger = "0.11.3"
git_commands = { path = "git_commands", version = "0.2.0" }
itertools = "0.13.0"
log = "0.4.22"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.8.14"

[dev-dependencies]
# For tests
rand = "0.8.5"
tempfile = "3.10.1"
